--- a/css/index.css
+++ b/css/index.css
@@ -134,3 +134,60 @@ button:hover{
 .artist img{
     width:100%;
 }
+
+/* Mobile Design */
+
+@media (max-width: 500px) {
+    nav a {
+     padding: 5%;
+     font-size: 1.7rem;
+     line-height: 0.2rem;
+    }
+    nav span {
+        border-width: 1px; }
+
+    .title-container div {
+        background-size: cover;
+        width: 100%;
+        height: 38vh;
+        margin-bottom: 3%;
+    }
+
+    .title-container h1{
+        font-size: 4rem;
+        line-height: 4.8rem;
+    }
+
+    hr {
+        border-width: 0.4rem;
+        margin: 0%;
+    }
+
+    .artists-container {
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        align-items: center;
+        margin-bottom: 20%;
+    }
+
+    .artist {
+        width: 90%;
+    
+    }
+
+    .artist img {
+        width: 70%;
+        height: 1%;
+        margin-bottom: 5%;
+    }
+
+    .artist a {
+        font-size: 1.6rem;
+    }
+
+    .bio {
+        font-size: 1.3rem;
+        margin-bottom: 10%;
+        line-height: 1.5rem;
+    }
